--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -36,9 +36,9 @@
     </ion-toolbar>
   </ion-header> -->
   <div>
-    <div class="container menu-data bg_color-dark-1">
+    <div class="container menu-data bg_color-dark-1" style="padding: 0;">
       <div class="row">
-        <div class="">
+        <div class="" style="padding: 0;">
           <!-- Nav tabs -->
           <div class="mt-5">
             <ul class="nav nav-tabs" role="tablist">
@@ -333,11 +333,11 @@
               </label>
             </div>
             
-            <div class="next-btn md:px-5 py-3" style="padding-bottom: 5rem !important;">
-              <a class="Bhagona-Btn float-start" (click)="gotocheff()">Cart <i class="fa fa-cart-plus"
-                  aria-hidden="true"></i></a>
-              <a class="Bhagona-Btn float-end" (click)="gotocheff()">Continue <i class="fa fa-long-arrow-right"
-                  aria-hidden="true"></i></a>
+             <div class="next-btn md:px-5 py-3" style="padding-bottom: 5rem !important;">
+              <a class="Bhagona-Btn float-start" (click)="gotocheff()" style="font-size: 12px;"><span style="font-size: 31px;">🧑‍🍳</span> Book
+                          a Chef </a>
+              <a class="Bhagona-Btn float-end" (click)="gotoVendors()" style="font-size: 12px;"><span style="font-size: 31px;">🍽️</span>Book
+                          Catering</a>
             </div>
           </div>
         </div>
@@ -610,11 +610,11 @@
 
             </div>
             
-            <div class="next-btn md:px-5 py-3" style="padding-bottom: 5rem !important;">
-              <a class="Bhagona-Btn float-start" (click)="gotocheff()">Cart <i class="fa fa-cart-plus"
-                  aria-hidden="true"></i></a>
-              <a class="Bhagona-Btn float-end" (click)="gotocheff()">Continue <i class="fa fa-long-arrow-right"
-                  aria-hidden="true"></i></a>
+             <div class="next-btn md:px-5 py-3" style="padding-bottom: 5rem !important;">
+              <a class="Bhagona-Btn float-start" (click)="gotocheff()" style="font-size: 12px;"><span style="font-size: 31px;">🧑‍🍳</span> Book
+                          a Chef </a>
+              <a class="Bhagona-Btn float-end" (click)="gotoVendors()" style="font-size: 12px;"><span style="font-size: 31px;">🍽️</span>Book
+                          Catering</a>
             </div>
           </div>
         </div>
